<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/customization_settings">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="selected_theme"
            android:summary="@string/themes_summary"
            android:title="@string/themes_title" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/animations"
            android:entryValues="@array/animations_values"
            android:key="animations"
            android:summary="@string/animations_summary"
            android:title="@string/animations_title" />

    </PreferenceCategory>
    <!-- lAUNGUAGES strings-->
    <PreferenceCategory android:title="@string/language_settings">

        <ListPreference
            android:entries="@array/languages"
            android:entryValues="@array/languages_values"
            android:key="selected_language"
            android:summary="@string/language_summary"
            android:title="@string/language_title" />

        <Preference
            android:key="help_translating"
            android:summary="@string/help_translating_summary"
            android:title="@string/help_translating_title"></Preference>

    </PreferenceCategory>
    <!-- OTHER strings-->
    <PreferenceCategory android:title="@string/other_settings">
        <Preference
            android:key="updates"
            android:summary="@string/check_updates_summary"
            android:title="@string/check_updates"></Preference>
        <Preference
            android:key="beta_testing"
            android:summary="@string/beta_desc"
            android:title="@string/beta_title"></Preference>

        <Preference
            android:key="other_info"
            android:title="@string/other_info"></Preference>

        <Preference
            android:key="library"
            android:title="@string/other_library"></Preference>

    </PreferenceCategory>

</PreferenceScreen>

