<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@drawable/ic_restore_black_48dp"
            android:title="Backup" />
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_gallery" android:icon="@drawable/ic_info_outline_black_48dp"
            android:title="Info" />
    </group>
    <item android:title="@string/Comunica">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/ic_rate_review_black_48dp"
                android:title="@string/rate" />
            <item android:id="@+id/nav_feed" android:icon="@drawable/ic_feedback_black_48dp"
                android:title="@string/feed" />
            <item android:id="@+id/action_bug" android:title="@string/action_bug"
                android:icon="@drawable/ic_bug_report_black_48dp"
                />
        </menu>
    </item>

</menu>