<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android2="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/infobg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android2:popupTheme="@style/AppTheme.PopupOverlay" />

    <android.support.v7.widget.CardView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:clickable="false"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/view3"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/ic_launcher2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/app_name"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_person_black_48dp"
                android:drawableTint="#767676"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/copyright_info"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_group_black_48dp"
                android:drawableTint="#767676"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="onClick2"
                android:paddingRight="40dp"
                android:text="@string/contributors"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_code_black_48dp"
                android:drawableTint="#767676"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="onClick"
                android:paddingRight="40dp"
                android:text="@string/source"
                android:textSize="15sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>